syntax = "proto3";

package pb;

option go_package = "./pb/;pb";

service Customer {
  rpc SendMessage(Message) returns (Reply) {}
  rpc BroadCast(BroadcastData) returns (Reply) {}
}

message Message{
  string AppId = 1;
  string ClientId = 2;
  int32  Type = 3;
  string Data = 4;
}

message BroadcastData{
  string AppId = 1;
  int32 Type = 2;
  string Data = 3;
  string FromClientId = 4;
}

message Reply{
  int32 Code = 1;
  string Msg = 2;
}